Added   GetConcreteOperatorContacts  method...

--- a/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook/PhoneBook.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contact.cs" />
-    <Compile Include="DataBase.cs" />
+    <Compile Include="PhoneBook.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
